<resources>
    <string name="app_name">akshatapp</string>
    <string name="action_settings">Settings</string>
    <string name="toptext">My Calculator</string>
    <string name="enter_first_number">Enter first number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="calculate_sum">Calculate Sum</string>
    <string name="calculate_difference">Calculate Difference</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_website_url">Your website URL</string>
    <string-array name="candidates">
        <item>Akshat Singhal</item>
        <item>Raj Shukla</item>
        <item>Rithwik Awasthi</item>
        <item>Himal Kumar Singh</item>
        <item>Rakshit Sinha</item>
        <item>Jivjot Singh</item>
        <item>Vishal Jha</item>
        <item>Suyash Mishra</item>
        <item>Anis Ur Rehman</item>
        <item>Aditya Razdhan</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_draweractivity">draweractivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_testdrawer">testdrawer</string>
    <string name="open_fragment_1">Open Fragment 1</string>
    <string name="open_fragment_2">Open Fragment 2</string>
    <string name="open_fragment_3">Open Fragment 3</string>
    <string name="open_fragment_4">Open Fragment 4</string>
    <string name="akshat_singhal">Akshat Singhal</string>

</resources>
