<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login"
    android:orientation="vertical"
    android:background="@mipmap/favicon"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=" Enter Your Credentials"
        android:textSize="100px"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#0A4C69"
        android:padding="10px"

        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:hint="@string/enter_username"
            android:id="@+id/username"
            android:inputType="text"

            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:paddingTop="10px"
            android:hint="@string/enter_password"
            android:id="@+id/password"
            android:inputType="textPassword"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10px"
            android:paddingTop="10px"
            android:hint="@string/confirm_password"
            android:id="@+id/confirm"
            android:inputType="textPassword"

            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30px"
            android:layout_weight="2"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:layout_weight="1"
                android:background="#5126AD"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_margin="10px"
                android:id="@+id/login"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:background="#5126AD"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:layout_margin="10px"
                android:id="@+id/signup"
                />

        </LinearLayout>



    </LinearLayout>



</LinearLayout>