<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--tools:context=".Fragments.adduserfragment">-->

    <!--&lt;!&ndash;<TextView&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="ADD NEW USER FRAGMENT"&ndash;&gt;-->
        <!--&lt;!&ndash;android:gravity="center"&ndash;&gt;-->
        <!--&lt;!&ndash;android:textSize="100px"&ndash;&gt;-->
        <!--&lt;!&ndash;android:background="#D49B8E"&ndash;&gt;-->
        <!--&lt;!&ndash;/>&ndash;&gt;-->

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/btn1"-->
        <!--android:text="click karde"-->
        <!--/>-->

<!--</LinearLayout>-->

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.implicitintent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enter your details"
            android:textAlignment="center"
            android:textSize="120px"
            android:textColor="#fff"
            android:background="#158BC9"
            android:textStyle="bold"
            android:fontFamily="sans-serif`"
            />

        <ImageView
            android:id="@+id/contactimg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_photo_camera_black_24dp"
            tools:ignore="VectorDrawableCompat" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_full_name"
            android:layout_margin="20px"
            android:id="@+id/name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_address"
            android:inputType="textEmailAddress"
            android:layout_margin="20px"
            android:id="@+id/email"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth"
            android:inputType="date"
            android:layout_margin="20px"
            android:id="@+id/date"
            android:drawableRight="@drawable/ic_date_range_black_24dp"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:layout_margin="20px"
            android:id="@+id/phone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_1"
            android:layout_margin="20px"
            android:id="@+id/address1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address_line_2"
            android:layout_margin="20px"
            android:id="@+id/address2"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20px"
            android:id="@+id/website"
            android:hint="@string/your_website_url"
            />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_margin="30px"
            android:id="@+id/gender"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Gender : "
                android:layout_weight="1"
                android:textSize="59px"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:layout_weight="1"
                android:id="@+id/male"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Female"
                android:layout_weight="1"
                android:id="@+id/female"
                />

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select your skills - "
            android:textSize="59px"
            android:layout_margin="30px"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="HTML"
                android:layout_weight="1"
                android:id="@+id/html"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CSS"
                android:layout_weight="1"
                android:id="@+id/css"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Bootstrap"
                android:layout_weight="1"
                android:id="@+id/bootstrap"
                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >

            <CheckBox
                android:layout_width="34dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="JavaScript"
                android:id="@+id/javascript"
                />

            <CheckBox
                android:layout_width="21dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="jQuery"
                android:id="@+id/jquery"
                />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PHP"
                android:layout_weight="1"
                android:id="@+id/php"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="50px"
            >

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_photo_camera_black_24dp"
                android:id="@+id/profile"
                android:layout_weight="1"
                tools:ignore="VectorDrawableCompat" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn3"
                android:layout_weight="1"
                android:text="Visit URL"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="50px"
            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/register"
                android:id="@+id/button1"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/login"
                android:id="@+id/button2"
                />

        </LinearLayout>




    </LinearLayout>

</ScrollView>



